# paige

./: .env.example  .gitignore  .vercelignore  AGENTS.md  CLAUDE.md  HANDOFF.md  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  vercel.json
agent/: README.md  agent.py  pyproject.toml
data/: .gitignore  README.md
scripts/: generate-fdc-pdfs.ts  ingest-lib.ts  ingest.test.ts  ingest.ts  pdf.test.ts  pdf.ts  test-qwen-image.ts  vercel-install.mjs
src/app/: SponsorOrbital.tsx  globals.css  layout.tsx  page.tsx
src/app/api/ask/: route.ts
src/app/api/image/: route.test.ts  route.ts
src/app/api/token/: route.ts
src/app/api/transcribe/: route.ts
src/app/api/tts/: route.ts
src/app/demo-company/: DriveExplorer.tsx  page.tsx
src/app/room/: PaigeAvatar.tsx  PaigeListener.tsx  RoomClient.tsx  page.tsx
src/components/ui/: radial-orbital-timeline.tsx
src/data/: fdc.ts
src/lib/: deepgram-browser.test.ts  deepgram-browser.ts  deepgram.test.ts  deepgram.ts  env.ts  image-race.test.ts  image-race.ts  minimax-image.test.ts  minimax-image.ts  paige-answer.test.ts  paige-answer.ts  paige-room.test.ts  paige-room.ts  presentation-image.test.ts  presentation-image.ts  qwen-image.test.ts  qwen-image.ts  room.ts  speech.ts  visual-intent.test.ts  visual-intent.ts
