[project]
name = "paige-agent"
version = "0.1.0"
description = "Paige — parked LiveKit Agents worker with Deepgram STT and MiniMax TTS."
requires-python = ">=3.11"
dependencies = [
    "livekit-agents",
    "livekit-plugins-deepgram",
    "livekit-plugins-silero",
    "livekit-plugins-turn-detector",
    "livekit-plugins-minimax",
    "python-dotenv",
]
